--- a/Fase 2/desafio2/desafio/style.css
+++ b/Fase 2/desafio2/desafio/style.css
@@ -51,6 +51,7 @@ header {
   background: rgba(0, 0, 0, 0.7);
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .modal img {
@@ -58,7 +59,24 @@ header {
   max-height: 80%;
 }
 
+#modalImg{
+z-index: 1;
+position: relative;
+}
+
+
+.background{
+  display: none;
+  z-index: 2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.527);
+  pointer-events: none;
+}
+
 .close-btn {
+  z-index: 3;
   position: absolute;
   top: 10px;
   right: 10px;
@@ -72,6 +90,7 @@ header {
 }
 
 .modal button {
+  z-index: 4;
   /* Estilos adicionais para o botão dentro da modal */
   background-color: #13283c;
   color: #fff;
@@ -84,4 +103,45 @@ header {
 
 .modal button:hover {
   background-color: #1c3a4a;
+}
+
+.galery-list{
+  width: 60%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 3;
+}
+
+.galery-list img{
+  margin-right: 10px;
+}
+
+.btn-left{
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.274);
+  height: 100px;
+  width: 80px;
+  font-size: 32px;
+  color: white;
+  z-index: 9;
+}
+
+.btn-right{
+  position: absolute;
+  color: white;
+  font-size: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.274);
+  height: 100px;
+  width: 80px;
+  z-index: 9;
 }
